# neutrino-electron

./: DiscrimGen.py  Discrimination.ipynb  GeneralPixelImageGen.py  ImageGen.py  PixelImageGen.py  README.md  SimDisplaySegments.ipynb  apptainer.sh  main_setup.sh  simdisplay.ipynb
Dune-Neutrino-GUI/: Custom_Plot_script.py  Generic_Plot_script.py  Main_Run_File.py  Model_Evaluation_script.py  Pixel_Array_Script.py  README.md  read_me.txt
Dune-Neutrino-GUI/DUNE_PROJECT_v0.0/: main.py
Dune-Neutrino-GUI/DUNE_PROJECT_v0.0/Backend/: Animated_Volume_Script.py  Evaluate_Model_Script.py  Generic_Plot_script.py  Heatmap_Function_Script.py  Model_Training_script.py
Dune-Neutrino-GUI/DUNE_PROJECT_v0.0/Core_Functions/: Pixel_Array_Script.py
Dune-Neutrino-GUI/DUNE_PROJECT_v0.0/Imports/: common_imports.py
Dune-Neutrino-GUI/DUNE_PROJECT_v0.0/Pages/: Advanced_Class_Selection_Page_Script.py  Animation_Page_Script.py  Dataset_View_Page_Script.py  Evaluate_Model_Page_Script.py  Figure_Creation_Page_Script.py  File_Selection_Page_Script.py  Load_Dataset_Page_Script.py  Model_Architecture_Page_Script.py  Model_Training_Page_Script.py  Setup_Animation_Page_Script.py  StartPage_Script.py  Training_And_Eval_Options_Page_Script.py  View_Segments_Page_Script.py  View_mc_hdr_Page_Script.py  View_traj_Page_Script.py
Dune-Neutrino-GUI/Legacy/: Main_Run_File.py  Model_Training_script.py  Pixel_Array_Script.py
edep-hdf5-tools/: README.md  edephdf5_analysis_starter.py
edep-reader/: .gitignore  CMakeLists.txt  PackageConfig.cmake.in  README.md  TestEnergy.cc  setup.sh
edep-reader/examples/: CMakeLists.txt  EDEPDisplay.cpp  EDEPReader.cpp
edep-reader/include/: EDEPHit.h  EDEPTrajectory.h  EDEPTrajectoryPoint.h  EDEPTree.h  EDEPUtils.h
edep-reader/src/: EDEPHit.cpp  EDEPTrajectory.cpp  EDEPTree.cpp
